<resources>
    <string name="app_name">InScribe Secure SMS</string>
    <string name="action_settings">Settings</string>
    <string name="action_newcontact">New Contacts</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_conversation_detail">conversation_detail</string>
    <string name="title_activity_single_message_view">single_message_view</string>
    <string name="title_activity_contacts_detail">contacts_detail</string>
    <string name="title_activity_session_detail">session_detail</string>
    <string name="sender_name">Sender Name:</string>
    <string name="sender_number">Sender Number:</string>
    <string name="message_timestamp">Message Timestamp:</string>
    <string name="last_secure_session_handshake">Last Secure Session Handshake:</string>
    <string name="last_handshake">Last Handshake</string>
    <string name="secure_session_status">Secure Session Status:</string>
    <string name="secure_session_freshness">Secure Session Freshness:</string>
    <string name="secure_session_nummessage">Number of Message Processed:</string>
    <string name="secure_session">Secure Session</string>
    <string name="encrypted_message_body">Encrypted Message Body:</string>
    <string name="plain_message_body">Plain Message Body</string>
    <string name="contact_photo">Contact Photo</string>
    <string name="color_container">Color Container</string>
    <string name="add_new_contacts">Add a New Contact</string>
    <string name="partner_name">Partner Name:</string>
    <string name="partner_number">Partner Number:</string>
    <string name="partner_role">Partner Role:</string>
    <string name="partner_rsa_pub_key">Partner RSA Public Key:</string>
    <string name="ecdh_session_priv_key">ECDH Session Private Key:</string>
    <string name="ecdh_session_pub_key">ECDH Session Public Key</string>
    <string name="ecdh_partner_session_pub_key">Partner Received ECDH Session Public Key:</string>
    <string name="ecdh_partner_digsign">Partner Received Digital Signature:</string>
    <string name="ecdh_partner_computedigsign">Partner Computed Digital Signature:</string>
    <string name="ecdh_partner_validity">Partner ECDH Session Public Key Validity:</string>
    <string name="session_shared_secret">Session Shared Secret:</string>
    <string name="session_aes_key">Session AES Key:</string>
    <string name="initiate_secure_session">Initiate Secure Session</string>
    <string name="restart_secure_session">Restart Secure Session</string>
    <string name="end_secure_session">End Secure Session</string>
    <string name="session_duration">Session Duration</string>
    <string name="contact_name">Contact Name:</string>
    <string name="contact_number">Contact Number:</string>
    <string name="contact_acquisition_date">Contact Acquisition Date:</string>
    <string name="contact_rsa_pub_key">Contact RSA Public Key:</string>
    <string name="delete_this_contact">Delete This Contact</string>
    <string name="session_date">Handshake on %1$s</string>
    <string name="session_details">Age is %1$d hour(s) %2$d minute(s) with %3$d message(s)</string>
    <string name="session_status_valid">VALID</string>
    <string name="session_status_notvalid">INVALID</string>
    <string name="session_status_fresh">FRESH</string>
    <string name="session_status_stale">STALE</string>
    <string name="session_status_decomposed">DECOMPOSED</string>
    <string name="session_age">%1$d Hour(s) %2$d Minute(s)</string>
    <string name="session_ds_valid">VALID</string>
    <string name="session_ds_notvalid">INVALID</string>
    <string name="session_role_master">MASTER</string>
    <string name="session_role_slave">SLAVE</string>
    <string name="session_unknown">NOT DEFINED</string>
    <string name="rsakeypairregenload">Regenerating RSA Key Pair...</string>
    <string name="profile_name">Your Name:</string>
    <string name="profile_number">Your Phone Number:</string>
    <string name="profile_lastupdate">Profile Last Update:</string>
    <string name="profile_rsapubkey">Your RSA Public Key:</string>
    <string name="profile_rsaprivkey">Your RSA Private Key: </string>
    <string name="profile_regenRSA">Regenerate RSA Key Pair</string>
    <string name="profile_update">Update Profile</string>
    <string name="compose_partnername">Partner Name:</string>
    <string name="compose_partnernum">Partner Number:</string>
    <string name="compose_selectpartner">Select Valid Secure Session</string>
    <string name="compose_plaintextsize">Message Size is %1$d byte(s)</string>
    <string name="compose_compressedtextsize">Compressed Message Size is %1$d byte(s)</string>
    <string name="compose_compressedtextalgorithm">Compression Algorithm is %1$s</string>
    <string name="compose_aesivtextsize">AES CBC Initialization Vector Size is %1$d byte(s)</string>
    <string name="compose_aesctextsize">AES Cipher Size is %1$d byte(s)</string>
    <string name="compose_encryptedtextsize">Encrypted Message Size is %1$d byte(s)</string>
    <string name="compose_metadatasize">Metadata Size is %1$d byte(s)</string>
    <string name="compose_completeencryptedsize">Final Message Size is %1$d byte(s)</string>
    <string name="compose_numberofsms">Encoded Message will be sent using %1$d SMS Message(s)</string>
    <string name="compose_encodedtextsize">Encoded Message Size is %1$d byte(s) or %2$d character(s)</string>
    <string name="compose_plaintextsize0">Message Size is 0 byte(s)</string>
    <string name="compose_compressedtextsize0">Compressed Message Size is 0 byte(s)</string>
    <string name="compose_compressedtextalgorithm0">Compression Algorithm is UNCOMPRESSED</string>
    <string name="compose_aesivtextsize0">AES CBC Initialization Vector Size is 0 byte(s)</string>
    <string name="compose_aesctextsize0">AES Cipher Size is 0 byte(s)</string>
    <string name="compose_encryptedtextsize0">Encrypted Message Size is 0 byte(s)</string>
    <string name="compose_metadatasize0">Metadata Size is 0 byte(s)</string>
    <string name="compose_completeencryptedsize0">Final Message Size is 0 byte(s)</string>
    <string name="compose_numberofsms0">Encoded Message will be sent using 0 SMS Message(s)</string>
    <string name="compose_encodedtextsize0">Encoded Message Size is 0 byte(s) or 0 character(s)</string>
    <string name="compose_plaintext">Plain Text Message:</string>
    <string name="compose_compressedtext">Compressed Text Message:</string>
    <string name="compose_aesivtext">AES CBC Generated Initialization Vector:</string>
    <string name="compose_aescttext">AES Cipher Text:</string>
    <string name="compose_encryptedtext">Encrypted Text Message:</string>
    <string name="compose_completeencryptedtext">Final Text Message:</string>
    <string name="compose_encodedtext">Encoded Text Message:</string>
    <string name="compose_encryptmessage">Compress and Encrypt Message</string>
    <string name="compose_sendmessage">Send Message</string>
    <string name="dev_dummy_name">Fulan Bin Abi Fulan</string>
    <string name="dev_dummy_number">+6281000000000</string>
    <string name="dev_dummy_timestamp">Wed, 4 Jul 2001 12:08:56 -0700</string>
    <string name="dev_dummy_date">Wed, 4 Jul 2001 12:08:56 -0700</string>
    <string name="dev_dummy_shortdate">20170602–112432</string>
    <string name="dev_dummy_status">INVALID</string>
    <string name="dev_dummy_duration">22D 12h32m</string>
    <string name="dev_dummy_emptystring"> </string>
    <string name="dev_dummy_longtext">Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text Some of The Long Text </string>
    <string name="title_activity_valid_session_list">ActivityValidSessionList</string>
    <string name="title_activity_conversation_list_detail">ActivityConversationListDetail</string>
    <string name="title_activity_message_detail">ActivityMessageDetail</string>
    <string name="message_partner_name">Partner Name:</string>
    <string name="message_partner_number">Partner Number:</string>
    <string name="message_type">Message Type:</string>
    <string name="message_datetimestamp">Message Timestamp:</string>
    <string name="message_ecdh_receivedpubkey">Partner ECDH Public Key:</string>
    <string name="message_ecdh_receivedds">Received Digital Signature:</string>
    <string name="message_ecdh_sendpubkey">Your ECDH Public Key:</string>
    <string name="message_ecdh_sendds">Computed Digital Signature:</string>
    <string name="message_ecdh_calculatedds">Calculated Digital Signature:</string>
    <string name="message_dsvalidity">Digital Signature Validity</string>
    <string name="message_acceptsecure">Accept Secure Session</string>
    <string name="message_activatesecure">Activate Secure Session</string>
    <string name="message_rejectsecure">Reject Secure Session</string>
    <string name="message_closebutton">Back</string>
    <string name="message_decodedtextmessage">Decoded Text Message</string>
    <string name="message_AESCT">AES Cipher Text:</string>
    <string name="message_AESIV">AES CBC Initialization Vector:</string>
    <string name="message_decryptedtext">Decrypted Text Message:</string>
    <string name="message_plaintext">Plain Text Message</string>
    <string name="message_saveplain">Save Plain Text Message</string>
    <string name="message_content">Encoded Message Content:</string>
    <string name="message_decryptemessage">Decode and Decrypt Message</string>
    <string name="message_deletemessage">Delete Message</string>
    <string name="message_clearplaintext">Clear Plain Text Message</string>
    <string name="title_activity_about">ActivityAbout</string>
    <string name="messagetype_1">Normal Uncompressed Encrypted Message</string>
    <string name="messagetype_2">Normal Encrypted Message with Block LZ4 Compression</string>
    <string name="messagetype_3">Normal Encrypted Message with Deflate Compression</string>
    <string name="messagetype_4">Handshake Request Message with Digital Signature</string>
    <string name="messagetype_5">Handshake Reply Message with Digital Signature</string>
    <string name="messagetype_6">Handshake Success Message with Digital Signature</string>
    <string name="messagetype_7">End Session Request Message</string>
    <string name="messagetype_8">End Session Success Message</string>
    <string name="messagetype_9">Error Message on Handshake Request, Digital Signature Invalid</string>
    <string name="messagetype_10">Error Message on Handshake Reply, Digital Signature Invalid</string>
    <string name="messagetype_11">Error Message on Handshake Success, Digital Signature Invalid</string>
    <string name="messagetype_12">Error Message on Handshake Reply, No Secure Session Active</string>
    <string name="messagetype_13">Error Message on Handshake: Handshake Declined</string>
    <string name="messagetype_14">Unknown</string>
    <string name="messagetype_group1">Normal Encrypted Message</string>
    <string name="messagetype_group2">Handshake Request/Reply/Success Message</string>
    <string name="messagetype_group3">Error Message</string>
</resources>