<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="digitalquantuminc.inscribesecuresms.ChildrenActivity.ActivityContactsDetail"
    tools:showIn="@layout/activity_contacts_detail">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_name"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/text_PartnerName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_dummy_name"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_number" />

            <TextView
                android:id="@+id/text_PartnerNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_dummy_number"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_acquisition_date" />

            <TextView
                android:id="@+id/text_ContactAcquisitionDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_dummy_date"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/contact_rsa_pub_key" />

            <EditText
                android:id="@+id/text_PartnerRSAPubKey"
                android:labelFor="@+id/text_PartnerRSAPubKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:maxLines="3"
                android:lines="3"
                android:minLines="3"
                android:scrollbars="vertical"
                android:text="@string/dev_dummy_longtext"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btn_DeleteContact"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/delete_this_contact" />

        </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>
