<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbarStyle="insideOverlay">

        <LinearLayout
            android:id="@+id/layoutProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageView_ProfileQRCode"
                android:layout_width="match_parent"
                android:layout_height="320dp"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:background="@color/colorWhite"
                android:contentDescription="@string/color_container" />

            <ProgressBar
                android:id="@+id/progressBar_Refresh"
                android:layout_width="320dp"
                android:layout_height="320dp"
                android:layout_gravity="center|center_vertical|center_horizontal"
                android:indeterminate="true"
                android:visibility="gone" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_name"
                android:textAlignment="viewStart" />

            <EditText
                android:id="@+id/text_ProfileName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:inputType="textNoSuggestions|textPersonName"
                android:labelFor="@+id/text_ProfileName"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:scrollbars="vertical"
                android:text="@string/dev_dummy_name"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_number" />

            <EditText
                android:id="@+id/text_ProfileNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:inputType="phone"
                android:labelFor="@+id/text_ProfileNumber"
                android:lines="1"
                android:maxLines="1"
                android:minLines="1"
                android:scrollbars="vertical"
                android:text="@string/dev_dummy_number"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_lastupdate" />

            <TextView
                android:id="@+id/text_ProfileLastUpdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/dev_dummy_date"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_rsapubkey" />

            <EditText
                android:id="@+id/text_ProfileRSAPubKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:labelFor="@+id/text_ProfileRSAPubKey"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:scrollbars="vertical"
                android:text="@string/dev_dummy_longtext"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textView25"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/profile_rsaprivkey" />

            <EditText
                android:id="@+id/text_ProfileRSAPrivKey"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="start"
                android:inputType="textMultiLine"
                android:labelFor="@+id/text_ProfileRSAPubKey"
                android:lines="3"
                android:maxLines="3"
                android:minLines="3"
                android:scrollbars="vertical"
                android:text="@string/dev_dummy_longtext"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btn_RegenRSAKeyPair"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/profile_regenRSA" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/btn_UpdateProfile"
                style="@style/Widget.AppCompat.Button"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:text="@string/profile_update" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>
